apply plugin: 'com.android.application'

android {
    namespace 'com.winlator'
    compileSdk 35

    defaultConfig {
        applicationId 'com.winlator'
        minSdkVersion 26
        targetSdkVersion 34
        versionCode 30
        versionName "11.0"
    }

    buildTypes {
        debug {
            minifyEnabled true
            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'

            ndk {
                abiFilters 'arm64-v8a'
            }
        }
        release {
            minifyEnabled true
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'

            ndk {
                abiFilters 'arm64-v8a'
            }
        }
    }

    compileOptions {
        sourceCompatibility JavaVersion.VERSION_1_8
        targetCompatibility JavaVersion.VERSION_1_8
    }

    lint {
        checkReleaseBuilds false
        abortOnError false
    }

    // Since we're using all prebuilt .so files for v11, disable native build for now.
    // The original proot/virglrenderer/midihandler are also in jniLibs as prebuilts.
    // Re-enable this block when building native from source.
    //
    // ndkVersion '27.2.12479018'
    // externalNativeBuild {
    //     cmake {
    //         version '3.22.1'
    //         path 'src/main/cpp/CMakeLists.txt'
    //     }
    // }

    packagingOptions {
        // Don't strip prebuilt libs
        doNotStrip '**/*.so'
        // Avoid duplicate files
        exclude 'META-INF/DEPENDENCIES'
    }
}

dependencies {
    implementation 'androidx.appcompat:appcompat:1.6.1'
    implementation 'androidx.preference:preference:1.2.1'
    implementation 'com.google.android.material:material:1.9.0'
    implementation 'com.github.luben:zstd-jni:1.5.2-3@aar'
    implementation 'org.tukaani:xz:1.9'
    implementation 'org.apache.commons:commons-compress:1.24.0'
}
